<resources>
    <string name="app_name" translatable="false">Easy Morse Coding</string>
    <string name="station_title" translatable="false">MORSE KEYER</string>
    <string name="status_ready">READY</string>
    <string name="status_transmitting">SENDING</string>
    <string name="status_hold">HOLD</string>
    <string name="status_fault">FAULT</string>
    <string name="state_engaged">STATE: ON</string>
    <string name="state_disarmed">STATE: OFF</string>
    <string name="pre_delay_label">PRE-DELAY</string>
    <string name="unit_seconds">s</string>
    <string name="repetition_label">REPETITION</string>
    <string name="menu">Menu</string>
    <string name="settings">Settings</string>
    <string name="countdown_description">Countdown: %1$d</string>
    <string name="message_to_encode">Message to Encode</string>
    <string name="morse_code_label">Morse Code (. - /)</string>
    <string name="invalid_morse_sequence">Invalid Morse sequence</string>
    <string name="decodes_to">Decodes to: %1$s</string>
    <string name="play">Play</string>
    <string name="resume">Resume</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="about_message">A simple app to encode and play Morse code signals using light and sound.</string>
    <string name="close">Close</string>
    <string name="outputs">Outputs</string>
    <string name="phone_flashlight">Flashlight</string>
    <string name="not_available"> (Not Available)</string>
    <string name="no_flashlight_available">No flashlight available on this device</string>
    <string name="sound">Sound</string>
    <string name="countdown">Countdown:</string>
    <string name="seconds_short">%1$ds</string>
    <string name="repeat">Repeat</string>
    <string name="timing_settings">Timing Settings</string>
    <string name="speed">Speed</string>
    <string name="unit_duration">Unit Duration</string>
    <string name="duration_seconds">%1$.2f s</string>
    <string name="multipliers">Multipliers</string>
    <string name="dot_duration">Dot Duration</string>
    <string name="dash_duration">Dash Duration</string>
    <string name="character_gap">Character Gap</string>
    <string name="word_gap">Word Gap</string>
    <string name="repeat_gap">Repeat Gap</string>
    <string name="done">Done</string>
    <string name="unit_count">%1$d units</string>
    <string name="settings_title">Settings</string>
    <string name="settings_general">General</string>
    <string name="settings_change_language">Change language</string>
    <string name="settings_timings">Timings</string>
    <string name="language_system_default">System default</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="back">Back</string>
    <string name="settings_app">App</string>
    <string name="settings_share_app">Share app</string>
    <string name="share_app_text">Check out Easy Morse Coding: https://play.google.com/store/apps/details?id=%1$s</string>
    <string name="settings_rate_app">Rate app</string>
    <string name="settings_customer_support">Customer support</string>
    <string name="support_email_address" translatable="false">davidemela.support@gmail.com</string>
    <string name="support_email_subject">Easy Morse Coding support request</string>
    <string name="error_no_email_app">No email application found</string>
    <string name="settings_about">About</string>
    <string name="about_version">Version %1$s</string>
    <string name="settings_community_support">Community &amp; support</string>
    <string name="settings_buy_coffee">Buy me a coffee</string>
    <string name="billing_thanks">Thank you so much for your support!</string>
    <string name="billing_unavailable">This purchase is not available right now</string>
    <string name="settings_legal">Legal</string>
    <string name="settings_privacy">Privacy policy</string>
    <string name="settings_terms">Terms</string>
    <string name="url_privacy" translatable="false">https://davikokar.github.io/android-docs/easy-morse-coder/privacy.html</string>
    <string name="url_terms" translatable="false">https://davikokar.github.io/android-docs/easy-morse-coder/terms.html</string>
</resources>